<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_create_acount"/>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/img_back"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/black_24dp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="serif"
                android:text="@string/dangky"
                android:textColor="@color/whilte"
                android:textSize="@dimen/chuthuong" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/whilte">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:backgroundTint="@color/orange"
                        android:id="@+id/edt_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:hint="@string/ten" />

                    <EditText
                        android:backgroundTint="@color/orange"
                        android:id="@+id/edt_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:hint="@string/ho" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/chesse" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="+84"
                        android:textSize="@dimen/chuthuong" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                    <EditText
                        android:backgroundTint="@color/orange"
                        android:id="@+id/edt_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:fontFamily="serif"
                        android:hint="@string/didong" />
                </LinearLayout>

                <EditText
                    android:backgroundTint="@color/orange"
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="serif"
                    android:hint="@string/email"
                    android:textSize="@dimen/chuthuong" />

                <EditText
                    android:backgroundTint="@color/orange"
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="serif"
                    android:hint="@string/matkhau"
                    android:textSize="@dimen/chuthuong" />

                <EditText
                    android:backgroundTint="@color/orange"
                    android:id="@+id/edt_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="serif"
                    android:hint="@string/magioithieu"
                    android:textSize="@dimen/chuthuong" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/select_create"
            android:fontFamily="serif"
            android:text="@string/dangky"
            android:textColor="@color/whilte" />
    </LinearLayout>
    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/khoangcach"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Điều khoản và điều kiện và chính sách bảo mật"
        android:textColor="@color/whilte"
        android:textSize="@dimen/chunho" />
</RelativeLayout>
