<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_Cardview"
                android:layout_margin="@dimen/magin"
                app:cardCornerRadius="@dimen/radius">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:fontFamily="serif"
                style="@style/textview_indam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luachondichvu" />
            <TextView
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textview_thuong"
                android:text="@string/tietkiemchiphi"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/re_service"
                android:layout_marginLeft="@dimen/magin_top"
                android:layout_marginRight="@dimen/magin_top"/>
            <TextView
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textview_indam"
                android:text="@string/uudai"/>

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/Slider_prom"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderCircularHandlerEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal"
                app:sliderIndicatorMargin="20dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />
        </LinearLayout>
</androidx.core.widget.NestedScrollView>