<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start" />
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_below="@id/toolbar"
    android:id="@+id/Refreshlayout"
    style="@style/Botomnavigation"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backdround"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_Cardview"
                android:layout_margin="@dimen/magin"
                app:cardCornerRadius="@dimen/radius">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/card" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/textview_indam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/luachondichvu" />

            <TextView
                style="@style/textview_thuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/tietkiemchiphi" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/re_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_top"
                android:layout_marginRight="@dimen/magin_top" />

            <TextView
                style="@style/textview_indam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/magin_left"
                android:fontFamily="serif"
                android:text="@string/uudai" />

            <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                android:id="@+id/dots_prom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/magin_top"
                app:dampingRatio="0.5"
                app:dotsColor="@color/orange"
                app:dotsCornerRadius="2dp"
                app:dotsSize="10dp"
                app:dotsSpacing="6dp"
                app:dotsStrokeColor="@color/red_orange"
                app:dotsStrokeWidth="2dp"
                app:stiffness="300" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager_Prom"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="@dimen/magin_top"
                android:clipToPadding="false"
                android:foregroundGravity="center"
                android:overScrollMode="never" />

            <TextView
                style="@style/textview_indam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/discover" />

            <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                android:id="@+id/dots_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/magin_top"
                app:dampingRatio="0.5"
                app:dotsColor="@color/orange"
                app:dotsCornerRadius="2dp"
                app:dotsSize="10dp"
                app:dotsSpacing="6dp"
                app:dotsStrokeColor="@color/red_orange"
                app:dotsStrokeWidth="2dp"
                app:stiffness="300" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager_discover"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="@dimen/magin_top"
                android:clipToPadding="false"
                android:foregroundGravity="center"
                android:overScrollMode="never" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
